--- a/Joyce/src/main/resources/static/editor/examples/multi-languages.html
+++ b/Joyce/src/main/resources/static/editor/examples/multi-languages.html
@@ -79,7 +79,7 @@
                             //});
 
                             lang = value;
-                            console.log(lang, value, editormd.defaults.lang);                        
+                           //console.log(lang, value, editormd.defaults.lang);
                         });
                     }
                 });
