--- a/Joyce/src/main/resources/static/editor/examples/onscroll-onpreviewscroll.html
+++ b/Joyce/src/main/resources/static/editor/examples/onscroll-onpreviewscroll.html
@@ -20,13 +20,13 @@
 {
     onscroll : function(event) {
         // console.clear();
-        // console.log("onscroll =>", this, this.id, this.settings, event);
+        ////console.log("onscroll =>", this, this.id, this.settings, event);
         // ...
     },
 
     onpreviewscroll : function(event) {
         // console.clear();
-        // console.log("onpreviewscroll =>", this, this.id, this.settings, event);
+        ////console.log("onpreviewscroll =>", this, this.id, this.settings, event);
         // ...
     }
 }
