--- a/Joyce/src/main/resources/static/editor/examples/onwatch-onunwatch.html
+++ b/Joyce/src/main/resources/static/editor/examples/onwatch-onunwatch.html
@@ -19,11 +19,11 @@
 ```javascript
 {
     onwatch : function() {
-        // console.log("onwatch =>", this, this.id, this.settings);
+        ////console.log("onwatch =>", this, this.id, this.settings);
     },
 
     onunwatch : function() {
-        // console.log("onunwatch =>", this, this.id, this.settings);
+        ////console.log("onunwatch =>", this, this.id, this.settings);
     }
 }
 ```
@@ -39,10 +39,10 @@
                     height : 720,
                     path   : '../lib/',
                     onwatch : function() {
-                        console.log("onwatch =>", this, this.id, this.settings);
+                       //console.log("onwatch =>", this, this.id, this.settings);
                     },
                     onunwatch : function() {
-                        console.log("onunwatch =>", this, this.id, this.settings);
+                       //console.log("onunwatch =>", this, this.id, this.settings);
                     }
                 });
             });
