--- a/Joyce/src/main/resources/static/editor/examples/set-get-replace-selection.html
+++ b/Joyce/src/main/resources/static/editor/examples/set-get-replace-selection.html
@@ -41,7 +41,7 @@ $("#btn1").click(function(){
 });
 
 $("#btn2").click(function(){
-    console.log("getCursor =>", testEditormd.getCursor());
+   //console.log("getCursor =>", testEditormd.getCursor());
 });
 
 $("#btn3").click(function(){
@@ -49,7 +49,7 @@ $("#btn3").click(function(){
 });
 
 $("#btn4").click(function(){
-    console.log("getSelection =>", testEditormd.getSelection());
+   //console.log("getSelection =>", testEditormd.getSelection());
 });
 
 $("#btn5").click(function(){
