--- a/Joyce/src/main/resources/static/editor/lib/codemirror/mode/gfm/index.html
+++ b/Joyce/src/main/resources/static/editor/lib/codemirror/mode/gfm/index.html
@@ -56,7 +56,7 @@ lines~~
 
 ```javascript
 for (var i = 0; i &lt; items.length; i++) {
-    console.log(items[i], i); // log them
+   //console.log(items[i], i); // log them
 }
 ```
 
