--- a/Joyce/src/main/resources/static/editor/tests/bootstrap-test.html
+++ b/Joyce/src/main/resources/static/editor/tests/bootstrap-test.html
@@ -53,7 +53,7 @@
                         imageFormats : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
                         imageUploadURL : "../examples/php/upload.php",
                         onload : function() {
-                            console.log('onload', this);
+                           //console.log('onload', this);
                         }
                     });
                 });  
