--- a/Joyce/src/main/resources/static/editor/examples/onload.html
+++ b/Joyce/src/main/resources/static/editor/examples/onload.html
@@ -21,7 +21,7 @@
     onload : function() {
         // alert("onload");
         // this.setMarkdown("### onloaded");
-        // console.log("onload =>", this, this.id, this.settings);
+        ////console.log("onload =>", this, this.id, this.settings);
     }
 }
 ```
@@ -43,7 +43,7 @@
                         //this.setMarkdown("###test onloaded");
                         //testEditor.setMarkdown("###Test onloaded");
                         alert("onloaded");
-                        console.log("onloaded =>", this, this.id, this.settings);
+                       //console.log("onloaded =>", this, this.id, this.settings);
                     }
                 });
             });
