--- a/Joyce/src/main/resources/static/editor/examples/multi-languages.html
+++ b/Joyce/src/main/resources/static/editor/examples/multi-languages.html
@@ -50,7 +50,7 @@
                     path : '../lib/'
                 });
                 
-                //console.log(editormd.defaults.lang); 
+                ////console.log(editormd.defaults.lang);
                 var lang = "zh-cn";
                 
                 // 动态加载语言包
@@ -79,7 +79,7 @@
                             //});
 
                             lang = value;
-                           //console.log(lang, value, editormd.defaults.lang);
+                           ////console.log(lang, value, editormd.defaults.lang);
                         });
                     }
                 });
